--- a/css/color.css
+++ b/css/color.css
@@ -8,7 +8,7 @@ span.highlight-texts{
 	color:  #92c500;
 }
 span.highlight-text{
-	color:  #b1e41e;
+	color:  #7339b6;
 }
 
 span.highlight-text-inverted{
